feat: Criação do endpoint para retornar as lições junto com as lições posteriores e anteriores para navegação durante o curso